--- a/less/content.less
+++ b/less/content.less
@@ -1353,9 +1353,10 @@ figure {
 .field-name-body table th {
     padding: 3px;
 }
-
+a.contains-image,
 a.contains-image:hover { 
     border: none; 
+    background: none;
 }
 
 blockquote {
