--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -238,7 +238,7 @@ aside {
 aside .sp-social-buttons .view-footer{
     background: transparent;
     padding: 0;
-    margin: 5px 0;
+    margin: 0;
     h2{
           background: transparent;
     display: block;
